# algs4c

./: .gitignore  CMakeLists.txt  main.c
array_structures/: CMakeLists.txt  queue.c  stack.c  stack.h
array_structures/unit_test/: CMakeLists.txt  test_queue.c  test_stack.c
include/: common.h
queue/: CMakeLists.txt  queue.h  queue_arr.c  queue_arr.h
stack/: CMakeLists.txt  stack.c  stack.h  stack_arr.c  stack_arr.h
unit_test/: CMakeLists.txt  test_queue.c  test_stack.c
