add_executable(testStack test_stack_arr.c)
add_executable(testQueue test_queue_arr.c)
target_link_libraries(testStack unity)
target_link_libraries(testStack stack)
target_link_libraries(testQueue unity)
target_link_libraries(testQueue queue)
add_test(testStack testStack)
add_test(testQueue testQueue)